force-app/main/default/objects/WorkOrder__c/WorkOrder__c.object-meta.xml
<CustomObject>
    <label>Work Order</label>
    <nameField>
        <displayFormat>WO-{000000}</displayFormat>
        <label>Work Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>