force-app/main/default/objects/WorkOrder__c/fields/AcademicLevel__c.field-meta.xml
<CustomField>
    <fullName>AcademicLevel__c</fullName>
    <label>Academic Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>