force-app/main/default/objects/WorkOrder__c/fields/ActualStatus__c.field-meta.xml
<CustomField>
    <fullName>ActualStatus__c</fullName>
    <label>Actual Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>eTutorStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Work order</fullName>
                <default>true</default>
                <label>New Work order</label>
            </value>
            <value>
                <fullName>Assigned to Main Handler</fullName>
            </value>
            <value>
                <fullName>Main Handler Analysis</fullName>
            </value>
            <value>
                <fullName>Pending with customer for Initial payment</fullName>
            </value>
            <value>
                <fullName>Initial Payment Received</fullName>
            </value>
            <value>
                <fullName>Pending with Team member</fullName>
            </value>
            <value>
                <fullName>Team member open Queries</fullName>
            </value>
            <value>
                <fullName>Pending with Customer for Queires</fullName>
            </value>
            <value>
                <fullName>Main handler work review</fullName>
            </value>
            <value>
                <fullName>Main Handler review completed</fullName>
            </value>
            <value>
                <fullName>Work delivered</fullName>
            </value>
            <value>
                <fullName>Pending with Student</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>No Bandwidth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>