force-app/main/default/objects/WorkOrder__c/fields/AdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDetails__c</fullName>
    <label>Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>