force-app/main/default/objects/WorkOrder__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>WorkOrderPayment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderPayment__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderPayment__c.WorkOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>