force-app/main/default/objects/WorkOrder__c/fields/Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending__c</fullName>
    <formula>If(Price__c&gt;0,Price__c - Amount_Paid__c,PlagiairsmFreeAmount__c-Amount_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>