force-app/main/default/objects/WorkOrder__c/fields/Analysis_of_Total_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Analysis_of_Total_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analysis of Total Pricing</label>
    <type>Checkbox</type>
</CustomField>