force-app/main/default/objects/WorkOrder__c/fields/Assigned_to_Team_member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Team_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to Team member</label>
    <type>Checkbox</type>
</CustomField>