force-app/main/default/objects/WorkOrder__c/fields/Discount_on_Plagarism_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Plagarism_Price__c</fullName>
    <formula>If ( ISPICKVAL(DiscountCoupon__r.Discount_Type__c,&apos;Amount&apos;),DiscountCoupon__r.Discount_Amount__c ,
If(ISPICKVAL(DiscountCoupon__r.Discount_Type__c,&apos;Percent&apos;),(( PlagiarismCheckAmount__c*DiscountCoupon__r.Discount_Amount__c)/100),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount on Plagarism Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>