force-app/main/default/objects/WorkOrder__c/fields/DiscountCoupon__c.field-meta.xml
<CustomField>
    <fullName>DiscountCoupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Coupons</label>
    <referenceTo>DiscountCoupons__c</referenceTo>
    <relationshipLabel>Work Order</relationshipLabel>
    <relationshipName>Work_Order</relationshipName>
    <type>Lookup</type>
</CustomField>