force-app/main/default/objects/WorkOrder__c/fields/DiscountOnAssignmentPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountOnAssignmentPrice__c</fullName>
    <formula>If ( ISPICKVAL(DiscountCoupon__r.Discount_Type__c,&apos;Amount&apos;),DiscountCoupon__r.Discount_Amount__c ,
If(ISPICKVAL(DiscountCoupon__r.Discount_Type__c,&apos;Percent&apos;),((Price__c*DiscountCoupon__r.Discount_Amount__c)/100),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount on Assignment Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>