force-app/main/default/objects/WorkOrder__c/fields/eTutorStatus__c.field-meta.xml
<CustomField>
    <fullName>eTutorStatus__c</fullName>
    <label>eTutor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Order Received</fullName>
                <default>true</default>
                <label>Work Order Received</label>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Work in Progress</fullName>
            </value>
            <value>
                <fullName>Additional information Required</fullName>
            </value>
            <value>
                <fullName>Plagiarism Check Report Completed</fullName>
            </value>
            <value>
                <fullName>Work completed. Payment Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Plagiarism Free Report Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Plagiarism Free Report Payment Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>