force-app/main/default/objects/WorkOrder__c/fields/eTutorWorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>eTutorWorkOrderID__c</fullName>
    <externalId>true</externalId>
    <label>eTutor Work Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>