force-app/main/default/objects/WorkOrder__c/fields/Final_Document__c.field-meta.xml
<CustomField>
    <fullName>Final_Document__c</fullName>
    <label>Final Document</label>
    <type>Url</type>
</CustomField>