force-app/main/default/objects/WorkOrder__c/fields/Final_Document_URL_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Final_Document_URL_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Document URL uploaded</label>
    <type>Checkbox</type>
</CustomField>