force-app/main/default/objects/WorkOrder__c/fields/Final_Payment_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Payment Reviewed</label>
    <type>Checkbox</type>
</CustomField>