force-app/main/default/objects/WorkOrder__c/fields/Final_Plagarism_amount_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Plagarism_amount_after_discount__c</fullName>
    <formula>PlagiarismCheckAmount__c - Discount_on_Plagarism_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Plagarism amount after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>