force-app/main/default/objects/WorkOrder__c/fields/FinalAmountAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmountAfterDiscount__c</fullName>
    <formula>Price__c  -  DiscountOnAssignmentPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>