force-app/main/default/objects/WorkOrder__c/fields/HomeworkAnswersURL__c.field-meta.xml
<CustomField>
    <fullName>HomeworkAnswersURL__c</fullName>
    <label>Homework Answers URL</label>
    <type>Url</type>
</CustomField>