force-app/main/default/objects/WorkOrder__c/fields/Initial_Amount_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Initial_Amount_to_Pay__c</fullName>
    <formula>IF(Price__c&gt;0,0.2 * Price__c,0.2* PlagiairsmFreeAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Amount to Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>