force-app/main/default/objects/WorkOrder__c/fields/LastSyncDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDateTime__c</fullName>
    <label>Last Sync Date Time</label>
    <type>DateTime</type>
</CustomField>