force-app/main/default/objects/WorkOrder__c/fields/MainHandler__c.field-meta.xml
<CustomField>
    <fullName>MainHandler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Handler/Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Order (Main Handler)</relationshipLabel>
    <relationshipName>Work_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>