force-app/main/default/objects/WorkOrder__c/fields/MainHandlerNameFormula__c.field-meta.xml
<CustomField>
    <fullName>MainHandlerNameFormula__c</fullName>
    <formula>MainHandler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MainHandlerNameFormula</label>
    <type>Text</type>
</CustomField>