force-app/main/default/objects/WorkOrder__c/fields/NumberOfWords__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWords__c</fullName>
    <label>Number of Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>