force-app/main/default/objects/WorkOrder__c/fields/Pages__c.field-meta.xml
<CustomField>
    <fullName>Pages__c</fullName>
    <label>Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>