force-app/main/default/objects/WorkOrder__c/fields/Plagiairsm_Free_Report_Requested__c.field-meta.xml
<CustomField>
    <fullName>Plagiairsm_Free_Report_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plagiairsm Free Report Requested</label>
    <type>Checkbox</type>
</CustomField>