force-app/main/default/objects/WorkOrder__c/fields/PlagiairsmFreeAmount__c.field-meta.xml
<CustomField>
    <fullName>PlagiairsmFreeAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plagiairsm Free Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>