force-app/main/default/objects/WorkOrder__c/fields/Plagiarism_more_than_20__c.field-meta.xml
<CustomField>
    <fullName>Plagiarism_more_than_20__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plagiarism  more than 20%</label>
    <type>Checkbox</type>
</CustomField>