force-app/main/default/objects/WorkOrder__c/fields/PlagiarismCheckAmount__c.field-meta.xml
<CustomField>
    <fullName>PlagiarismCheckAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plagiarism Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>