force-app/main/default/objects/WorkOrder__c/fields/PlagiarismCheckURLDocument__c.field-meta.xml
<CustomField>
    <fullName>PlagiarismCheckURLDocument__c</fullName>
    <label>Plagiarism Check URL Document</label>
    <type>Url</type>
</CustomField>