force-app/main/default/objects/WorkOrder__c/fields/PromptMessage__c.field-meta.xml
<CustomField>
    <fullName>PromptMessage__c</fullName>
    <label>Prompt Message</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>We are checking the document for plagiarism. Please wait for some time.</fullName>
            </value>
            <value>
                <fullName>You will receive the update on plagiarism check by evening.</fullName>
            </value>
            <value>
                <fullName>We are working on your document to remove plagiarism.</fullName>
            </value>
            <value>
                <fullName>Please provide us the requirements of the professor.</fullName>
            </value>
            <value>
                <fullName>Please pay the amount so that we can deliver the work to you as soon as possible.</fullName>
            </value>
            <value>
                <fullName>Work delivered.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>