force-app/main/default/objects/WorkOrder__c/fields/StudentEmail__c.field-meta.xml
<CustomField>
    <fullName>StudentEmail__c</fullName>
    <formula>Student__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Email</label>
    <type>Text</type>
</CustomField>