force-app/main/default/objects/WorkOrder__c/fields/StudentNameFormula__c.field-meta.xml
<CustomField>
    <fullName>StudentNameFormula__c</fullName>
    <formula>Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StudentNameFormula</label>
    <type>Text</type>
</CustomField>