force-app/main/default/objects/WorkOrder__c/fields/StudentPhone__c.field-meta.xml
<CustomField>
    <fullName>StudentPhone__c</fullName>
    <formula>Student__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Phone</label>
    <type>Text</type>
</CustomField>