force-app/main/default/objects/WorkOrder__c/fields/TeamMember__c.field-meta.xml
<CustomField>
    <fullName>TeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Order (Team Member)</relationshipLabel>
    <relationshipName>Work_Order2</relationshipName>
    <type>Lookup</type>
</CustomField>