force-app/main/default/objects/WorkOrder__c/fields/TeamMemberNameFormula__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberNameFormula__c</fullName>
    <formula>TeamMember__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TeamMemberNameFormula</label>
    <type>Text</type>
</CustomField>