force-app/main/default/objects/WorkOrder__c/fields/Verified_Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Verified_Initial_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Initial Payment</label>
    <type>Checkbox</type>
</CustomField>