force-app/main/default/objects/WorkOrder__c/fields/WorkSubType__c.field-meta.xml
<CustomField>
    <fullName>WorkSubType__c</fullName>
    <label>Work Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>