force-app/main/default/objects/WorkOrder__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <label>Work Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>