force-app/main/default/objects/WorkOrder__c/recordTypes/ContentWriting.recordType-meta.xml
<RecordType>
    <fullName>ContentWriting</fullName>
    <active>true</active>
    <label>Content Writing</label>
</RecordType>