force-app/main/default/objects/WorkOrder__c/recordTypes/PlagiarismCheck.recordType-meta.xml
<RecordType>
    <fullName>PlagiarismCheck</fullName>
    <active>true</active>
    <label>Plagiarism Check</label>
</RecordType>