force-app/main/default/objects/WorkOrder__c/validationRules/Final_DocumentURL_NULL_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_DocumentURL_NULL_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(eTutorStatus__c,&apos;Completed&apos;),
OR(ISBLANK( Final_Document__c ),
ISNULL(Final_Document__c ),LEN(Final_Document__c )&lt;5))</errorConditionFormula>
    <errorDisplayField>Final_Document__c</errorDisplayField>
    <errorMessage>Please update the final document URL to complete the order</errorMessage>
</ValidationRule>