force-app/main/default/objects/WorkOrder__c/validationRules/Payment_completion_price_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_completion_price_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(eTutorStatus__c,&apos;Completed&apos;),
Amount_Pending__c&lt;&gt;0)</errorConditionFormula>
    <errorMessage>Work Order cannot be completed as there is pending amount to be paid by Customer</errorMessage>
</ValidationRule>