force-app/main/default/objects/WorkOrder__c/validationRules/Payment_Pending_price_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Pending_price_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(ActualStatus__c,&apos;Pending with customer for Initial payment&apos;),
ISPICKVAL(eTutorStatus__c,&apos;Payment Pending&apos;),
ISNULL(Price__c))</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Please update the price of the work order</errorMessage>
</ValidationRule>