force-app/main/default/objects/WorkOrder__c/validationRules/Team_Member_NULL_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Member_NULL_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(ActualStatus__c,&apos;Pending with Team member&apos;),
ISPICKVAL(ActualStatus__c,&apos;Team member open Queries&apos;),
ISPICKVAL(ActualStatus__c,&apos;Pending with Customer for Queires&apos;),
ISPICKVAL(ActualStatus__c,&apos;Main handler work review&apos;),
ISPICKVAL(ActualStatus__c,&apos;Main Handler review completed&apos;),
ISPICKVAL(ActualStatus__c,&apos;Work delivered&apos;)),

ISBLANK(TeamMember__c))</errorConditionFormula>
    <errorDisplayField>TeamMember__c</errorDisplayField>
    <errorMessage>Please assign a Team member</errorMessage>
</ValidationRule>