force-app/main/default/objects/WorkOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>eTutorWorkOrderID__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>MainHandler__c</columns>
    <columns>Subject__c</columns>
    <columns>eTutorStatus__c</columns>
    <columns>ActualStatus__c</columns>
    <columns>TeamMember__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>